Added 3D model of the showroom